--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,6 +1,7 @@
 @import "base";
 @import "bootstrap";
 @import "pod-styles.scss";
+@import 'ember-basic-dropdown';
 @import "typography";
 @import "separator";
 @import "segment";
