--- a/app/components/platform/main-filters/template.hbs
+++ b/app/components/platform/main-filters/template.hbs
@@ -1,5 +1,16 @@
 <div class="{{styleNamespace}}__dropdowns">
-  {{platform/filters-dropdown options=roleOptions}}
+  {{#platform/filters-dropdown selected='Candidates' as |selected dropdown updateSelection|}}
+    {{platform/filters-dropdown-option
+      onSelect=(action updateSelection)
+      dropdownSelection=selected
+      dropdown=dropdown
+      label='Candidates'}}
+    {{platform/filters-dropdown-option
+      onSelect=(action updateSelection)
+      dropdownSelection=selected
+      dropdown=dropdown
+      label='Leads'}}
+  {{/platform/filters-dropdown}}
 </div>
 {{#each filters as |filter|}}
   {{platform/main-filter filter}}
