--- a/app/components/platform/filters-dropdown/style.scss
+++ b/app/components/platform/filters-dropdown/style.scss
@@ -23,7 +23,7 @@
   &--open {
     background-color: darken(color('white'), 5%);
     border: 1px solid gray('400');
-    box-shadow: inset 0 1px 3px 0 gray('400');
+    box-shadow: inset 0 1px 3px 0 gray('400') !important;
   }
 }
 
