--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -2,6 +2,7 @@
 @import "bootstrap";
 @import "pod-styles.scss";
 @import 'ember-basic-dropdown';
+@import 'ember-basic-dropdown/custom';
 @import "typography";
 @import "separator";
 @import "segment";
