--- a/app/components/platform/main-filter/template.hbs
+++ b/app/components/platform/main-filter/template.hbs
@@ -1,1 +1,10 @@
-{{filter}}
+<div class="{{styleNamespace}}__card">
+  <h4 class="{{styleNamespace}}__title">
+    <i class={{iconClasses}}></i>
+    {{name}}
+  </h4>
+  <p>
+    {{description}}
+  </p>
+  <i class="{{styleNamespace}}__destroy fas fa-times"></i>
+</div>
